v5_9_8/include/plplot.h

typedef double   PLFLT;
typedef float    PLFLT;
typedef uint32_t       PLUINT;
typedef int32_t        PLINT;
typedef unsigned int   PLUINT;
typedef int            PLINT;
typedef PLUINT   PLUNICODE;
typedef PLINT    PLBOOL;
typedef void*    PLPointer;
typedef plf2ops_t * PLF2OPS;
#define    plpath                   c_plpath
#define    plmesh                   c_plmesh
#define    plmeshc                  c_plmeshc
#define    plmkstrm                 c_plmkstrm
#define    plmtex                   c_plmtex
#define    plmtex3                  c_plmtex3
#define    plot3d                   c_plot3d
#define    plot3dc                  c_plot3dc
#define    plot3dcl                 c_plot3dcl
#define    plpat                    c_plpat
#define    plpoin                   c_plpoin
#define    plpoin3                  c_plpoin3
#define    plpoly3                  c_plpoly3
#define    plprec                   c_plprec
#define    plpsty                   c_plpsty
#define    plptex                   c_plptex
#define    plptex3                  c_plptex3
#define    plrandd                  c_plrandd
#define    plreplot                 c_plreplot
#define    plrgb                    c_plrgb
#define    plrgb1                   c_plrgb1
#define    plrgbhls                 c_plrgbhls
#define    plschr                   c_plschr
#define    plscmap0                 c_plscmap0
#define    plscmap0a                c_plscmap0a
#define    plscmap0n                c_plscmap0n
#define    plscmap1                 c_plscmap1
#define    plscmap1a                c_plscmap1a
#define    plscmap1l                c_plscmap1l
#define    plscmap1la               c_plscmap1la
#define    plscmap1n                c_plscmap1n
#define    plscmap1_range           c_plscmap1_range
#define    plgcmap1_range           c_plgcmap1_range
#define    plscol0                  c_plscol0
#define    plscol0a                 c_plscol0a
#define    plscolbg                 c_plscolbg
#define    plscolbga                c_plscolbga
#define    plscolor                 c_plscolor
#define    plscompression           c_plscompression
#define    plsdev                   c_plsdev
#define    plsdidev                 c_plsdidev
#define    plsdimap                 c_plsdimap
#define    plsdiori                 c_plsdiori
#define    plsdiplt                 c_plsdiplt
#define    plsdiplz                 c_plsdiplz
#define    plseed                   c_plseed
#define    plsesc                   c_plsesc
#define    plsfam                   c_plsfam
#define    plsfci                   c_plsfci
#define    plsfnam                  c_plsfnam
#define    plsfont                  c_plsfont
#define    plshade                  c_plshade
#define    plsurf3d                 c_plsurf3d
PLDLLIMPEXP void
c_plcont( const PLFLT **f, PLINT nx, PLINT ny, PLINT kx, PLINT lx,
          PLINT ky, PLINT ly, const PLFLT *clevel, PLINT nlevel,
          void ( *pltr )( PLFLT, PLFLT, PLFLT *, PLFLT *, PLPointer ),
          PLPointer pltr_data );
PLDLLIMPEXP void
plfcont( PLFLT ( *f2eval )( PLINT, PLINT, PLPointer ),
         PLPointer f2eval_data,
         PLINT nx, PLINT ny, PLINT kx, PLINT lx,
         PLINT ky, PLINT ly, const PLFLT *clevel, PLINT nlevel,
         void ( *pltr )( PLFLT, PLFLT, PLFLT *, PLFLT *, PLPointer ),
         PLPointer pltr_data );
PLDLLIMPEXP void
c_plmesh( const PLFLT *x, const PLFLT *y, const PLFLT **z, PLINT nx, PLINT ny, PLINT opt );
PLDLLIMPEXP void
c_plmeshc( const PLFLT *x, const PLFLT *y, const PLFLT **z, PLINT nx, PLINT ny, PLINT opt,
           const PLFLT *clevel, PLINT nlevel );
PLDLLIMPEXP void
c_plmkstrm( PLINT *p_strm );
PLDLLIMPEXP void
c_plmtex( const char *side, PLFLT disp, PLFLT pos, PLFLT just,
          const char *text );
PLDLLIMPEXP void
c_plmtex3( const char *side, PLFLT disp, PLFLT pos, PLFLT just,
           const char *text );
PLDLLIMPEXP void
c_plot3d( const PLFLT *x, const PLFLT *y, const PLFLT **z,
          PLINT nx, PLINT ny, PLINT opt, PLBOOL side );
PLDLLIMPEXP void
c_plot3dc( const PLFLT *x, const PLFLT *y, const PLFLT **z,
           PLINT nx, PLINT ny, PLINT opt,
           const PLFLT *clevel, PLINT nlevel );
PLDLLIMPEXP void
c_plot3dcl( const PLFLT *x, const PLFLT *y, const PLFLT **z,
            PLINT nx, PLINT ny, PLINT opt,
            const PLFLT *clevel, PLINT nlevel,
            PLINT ixstart, PLINT ixn, const PLINT *indexymin, const PLINT *indexymax );
#define DRAW_LINEX     ( 1 << 0 )                  
#define DRAW_LINEY     ( 1 << 1 )                  
#define DRAW_LINEXY    ( DRAW_LINEX | DRAW_LINEY ) 
#define MAG_COLOR      ( 1 << 2 )                  
#define BASE_CONT      ( 1 << 3 )                  
#define TOP_CONT       ( 1 << 4 )                  
#define SURF_CONT      ( 1 << 5 )                  
#define DRAW_SIDES     ( 1 << 6 )                  
#define FACETED        ( 1 << 7 )                  
#define MESH           ( 1 << 8 )                  
PLDLLIMPEXP void
c_plpat( PLINT nlin, const PLINT *inc, const PLINT *del );
PLDLLIMPEXP void
c_plpath( PLINT n, PLFLT x1, PLFLT y1, PLFLT x2, PLFLT y2 );
PLDLLIMPEXP void
c_plpoin( PLINT n, const PLFLT *x, const PLFLT *y, PLINT code );
PLDLLIMPEXP void
c_plpoin3( PLINT n, const PLFLT *x, const PLFLT *y, const PLFLT *z, PLINT code );
PLDLLIMPEXP void
c_plpoly3( PLINT n, const PLFLT *x, const PLFLT *y, const PLFLT *z, const PLBOOL *draw, PLBOOL ifcc );
PLDLLIMPEXP void
c_plprec( PLINT setp, PLINT prec );
PLDLLIMPEXP void
c_plpsty( PLINT patt );
PLDLLIMPEXP void
c_plptex( PLFLT x, PLFLT y, PLFLT dx, PLFLT dy, PLFLT just, const char *text );
PLDLLIMPEXP void
c_plptex3( PLFLT wx, PLFLT wy, PLFLT wz, PLFLT dx, PLFLT dy, PLFLT dz,
           PLFLT sx, PLFLT sy, PLFLT sz, PLFLT just, const char *text );
PLDLLIMPEXP PLFLT
c_plrandd( void );
PLDLLIMPEXP void
c_plreplot( void );
PLDLLIMPEXP void
c_plrgbhls( PLFLT r, PLFLT g, PLFLT b, PLFLT *p_h, PLFLT *p_l, PLFLT *p_s );
PLDLLIMPEXP void
c_plschr( PLFLT def, PLFLT scale );
PLDLLIMPEXP void
c_plscmap0( const PLINT *r, const PLINT *g, const PLINT *b, PLINT ncol0 );
PLDLLIMPEXP void
c_plscmap0a( const PLINT *r, const PLINT *g, const PLINT *b, const PLFLT *a, PLINT ncol0 );
PLDLLIMPEXP void
c_plscmap0n( PLINT ncol0 );
PLDLLIMPEXP void
c_plscmap1( const PLINT *r, const PLINT *g, const PLINT *b, PLINT ncol1 );
PLDLLIMPEXP void
c_plscmap1a( const PLINT *r, const PLINT *g, const PLINT *b, const PLFLT *a, PLINT ncol1 );
PLDLLIMPEXP void
c_plscmap1l( PLBOOL itype, PLINT npts, const PLFLT *intensity,
             const PLFLT *coord1, const PLFLT *coord2, const PLFLT *coord3, const PLBOOL *rev );
PLDLLIMPEXP void
c_plscmap1la( PLBOOL itype, PLINT npts, const PLFLT *intensity,
              const PLFLT *coord1, const PLFLT *coord2, const PLFLT *coord3, const PLFLT *a, const PLBOOL *rev );
PLDLLIMPEXP void
c_plscmap1n( PLINT ncol1 );
PLDLLIMPEXP void
c_plscmap1_range( PLFLT min_color, PLFLT max_color );
PLDLLIMPEXP void
c_plgcmap1_range( PLFLT *min_color, PLFLT *max_color );
PLDLLIMPEXP void
c_plscol0( PLINT icol0, PLINT r, PLINT g, PLINT b );
PLDLLIMPEXP void
c_plscol0a( PLINT icol0, PLINT r, PLINT g, PLINT b, PLFLT a );
PLDLLIMPEXP void
c_plscolbg( PLINT r, PLINT g, PLINT b );
PLDLLIMPEXP void
c_plscolbga( PLINT r, PLINT g, PLINT b, PLFLT a );
PLDLLIMPEXP void
c_plscolor( PLINT color );
PLDLLIMPEXP void
c_plscompression( PLINT compression );
PLDLLIMPEXP void
c_plsdev( const char *devname );
PLDLLIMPEXP void
c_plsdidev( PLFLT mar, PLFLT aspect, PLFLT jx, PLFLT jy );
PLDLLIMPEXP void
c_plsdimap( PLINT dimxmin, PLINT dimxmax, PLINT dimymin, PLINT dimymax,
            PLFLT dimxpmm, PLFLT dimypmm );
PLDLLIMPEXP void
c_plsdiori( PLFLT rot );
PLDLLIMPEXP void
c_plsdiplt( PLFLT xmin, PLFLT ymin, PLFLT xmax, PLFLT ymax );
PLDLLIMPEXP void
c_plsdiplz( PLFLT xmin, PLFLT ymin, PLFLT xmax, PLFLT ymax );
PLDLLIMPEXP void
c_plseed( unsigned int s );
PLDLLIMPEXP void
c_plsesc( char esc );
PLDLLIMPEXP void
c_plsfam( PLINT fam, PLINT num, PLINT bmax );
PLDLLIMPEXP void
c_plsfci( PLUNICODE fci );
PLDLLIMPEXP void
c_plsfnam( const char *fnam );
PLDLLIMPEXP void
c_plsfont( PLINT family, PLINT style, PLINT weight );
PLDLLIMPEXP void
c_plshade( const PLFLT **a, PLINT nx, PLINT ny, PLINT ( *defined )( PLFLT, PLFLT ),
           PLFLT left, PLFLT right, PLFLT bottom, PLFLT top,
           PLFLT shade_min, PLFLT shade_max,
           PLINT sh_cmap, PLFLT sh_color, PLINT sh_width,
           PLINT min_color, PLINT min_width,
           PLINT max_color, PLINT max_width,
           void ( *fill )( PLINT, const PLFLT *, const PLFLT * ), PLBOOL rectangular,
           void ( *pltr )( PLFLT, PLFLT, PLFLT *, PLFLT *, PLPointer ),
           PLPointer pltr_data );
PLDLLIMPEXP void
c_plshade1( const PLFLT *a, PLINT nx, PLINT ny, PLINT ( *defined )( PLFLT, PLFLT ),
            PLFLT left, PLFLT right, PLFLT bottom, PLFLT top,
            PLFLT shade_min, PLFLT shade_max,
            PLINT sh_cmap, PLFLT sh_color, PLINT sh_width,
            PLINT min_color, PLINT min_width,
            PLINT max_color, PLINT max_width,
            void ( *fill )( const PLINT, const PLFLT *, const PLFLT * ), PLBOOL rectangular,
            void ( *pltr )( PLFLT, PLFLT, PLFLT *, PLFLT *, PLPointer ),
            PLPointer pltr_data );
PLDLLIMPEXP void
c_plshades( const PLFLT **a, PLINT nx, PLINT ny, PLINT ( *defined )( PLFLT, PLFLT ),
            PLFLT xmin, PLFLT xmax, PLFLT ymin, PLFLT ymax,
            const PLFLT *clevel, PLINT nlevel, PLINT fill_width,
            PLINT cont_color, PLINT cont_width,
            void ( *fill )( PLINT, const PLFLT *, const PLFLT * ), PLBOOL rectangular,
            void ( *pltr )( PLFLT, PLFLT, PLFLT *, PLFLT *, PLPointer ),
            PLPointer pltr_data );
PLDLLIMPEXP void
plfshades( PLF2OPS zops, PLPointer zp, PLINT nx, PLINT ny,
           PLINT ( *defined )( PLFLT, PLFLT ),
           PLFLT xmin, PLFLT xmax, PLFLT ymin, PLFLT ymax,
           const PLFLT *clevel, PLINT nlevel, PLINT fill_width,
           PLINT cont_color, PLINT cont_width,
           void ( *fill )( PLINT, const PLFLT *, const PLFLT * ), PLINT rectangular,
           void ( *pltr )( PLFLT, PLFLT, PLFLT *, PLFLT *, PLPointer ),
           PLPointer pltr_data );
PLDLLIMPEXP void
plfshade( PLFLT ( *f2eval )( PLINT, PLINT, PLPointer ),
          PLPointer f2eval_data,
          PLFLT ( *c2eval )( PLINT, PLINT, PLPointer ),
          PLPointer c2eval_data,
          PLINT nx, PLINT ny,
          PLFLT left, PLFLT right, PLFLT bottom, PLFLT top,
          PLFLT shade_min, PLFLT shade_max,
          PLINT sh_cmap, PLFLT sh_color, PLINT sh_width,
          PLINT min_color, PLINT min_width,
          PLINT max_color, PLINT max_width,
          void ( *fill )( PLINT, const PLFLT *, const PLFLT * ), PLBOOL rectangular,
          void ( *pltr )( PLFLT, PLFLT, PLFLT *, PLFLT *, PLPointer ),
          PLPointer pltr_data );
PLDLLIMPEXP void
plfshade1( PLF2OPS zops, PLPointer zp, PLINT nx, PLINT ny,
           PLINT ( *defined )( PLFLT, PLFLT ),
           PLFLT xmin, PLFLT xmax, PLFLT ymin, PLFLT ymax,
           PLFLT shade_min, PLFLT shade_max,
           PLINT sh_cmap, PLFLT sh_color, PLINT sh_width,
           PLINT min_color, PLINT min_width,
           PLINT max_color, PLINT max_width,
           void ( *fill )( PLINT, const PLFLT *, const PLFLT * ), PLINT rectangular,
           void ( *pltr )( PLFLT, PLFLT, PLFLT *, PLFLT *, PLPointer ),
           PLPointer pltr_data );
PLDLLIMPEXP void
c_plimagefr( const PLFLT **idata, PLINT nx, PLINT ny,
             PLFLT xmin, PLFLT xmax, PLFLT ymin, PLFLT ymax, PLFLT zmin, PLFLT zmax,
             PLFLT valuemin, PLFLT valuemax,
             void ( *pltr )( PLFLT, PLFLT, PLFLT *, PLFLT *, PLPointer ),
             PLPointer pltr_data );
PLDLLIMPEXP void
plfimagefr( PLF2OPS idataops, PLPointer idatap, PLINT nx, PLINT ny,
            PLFLT xmin, PLFLT xmax, PLFLT ymin, PLFLT ymax, PLFLT zmin, PLFLT zmax,
            PLFLT valuemin, PLFLT valuemax,
            void ( *pltr )( PLFLT, PLFLT, PLFLT *, PLFLT *, PLPointer ),
            PLPointer pltr_data );
PLDLLIMPEXP void
c_plvect( const PLFLT **u, const PLFLT **v, PLINT nx, PLINT ny, PLFLT scale,
          void ( *pltr )( PLFLT, PLFLT, PLFLT *, PLFLT *, PLPointer ),
          PLPointer pltr_data );
PLDLLIMPEXP void
plfvect( PLFLT ( *getuv )( PLINT, PLINT, PLPointer ),
         PLPointer up, PLPointer vp,
         PLINT nx, PLINT ny, PLFLT scale,
         void ( *pltr )( PLFLT, PLFLT, PLFLT *, PLFLT *, PLPointer ),
         PLPointer pltr_data );
PLDLLIMPEXP void
c_plrgb( PLFLT r, PLFLT g, PLFLT b );
PLDLLIMPEXP void
c_plrgb1( PLINT r, PLINT g, PLINT b );